Pushing changes to MONGODB_DB_Upload

--- a/Database Files/MONGODB_DB_Upload.ipynb
+++ b/Database Files/MONGODB_DB_Upload.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,9 +80,9 @@
     "\n",
     "client = MongoClient('localhost', 27017)\n",
     "db = client['pro3news']\n",
-    "collection= db['weekly_stock_data']\n",
+    "collection= db['intraDay_stock_data']\n",
     "\n",
-    "with open('WeeklyCovidStocks_DOWindustrial.json') as g:\n",
+    "with open('../COVID-stocks/Stock Data/IntraDayCovidStocks_60min_SP500.json') as g:\n",
     "    file_data = json.load(g)\n",
     "\n",
     "# if pymongo >= 3.0 use insert_one() for inserting one document\n",
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,9 +103,9 @@
     "\n",
     "client = MongoClient('localhost', 27017)\n",
     "db = client['pro3news']\n",
-    "collection= db['weekly_stock_data']\n",
+    "collection= db['intraDay_stock_data']\n",
     "\n",
-    "with open('WeeklyCovidStocks_SP500.json') as g:\n",
+    "with open('../COVID-stocks/Stock Data/IntraDayCovidStocks_60min_DOWindustrial.json') as g:\n",
     "    file_data = json.load(g)\n",
     "\n",
     "# if pymongo >= 3.0 use insert_one() for inserting one document\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
     "db = client['pro3news']\n",
     "collection= db['daily_stock_data']\n",
     "\n",
-    "with open('DailyCovidStocks_SP500.json') as g:\n",
+    "with open('../COVID-stocks/Stock Data/DailyCovidStocks_SP500.json') as g:\n",
     "    file_data = json.load(g)\n",
     "\n",
     "# if pymongo >= 3.0 use insert_one() for inserting one document\n",
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,7 +151,99 @@
     "db = client['pro3news']\n",
     "collection= db['daily_stock_data']\n",
     "\n",
-    "with open('WeeklyCovidStocks_DOWindustrial.json') as g:\n",
+    "with open('../COVID-stocks/Stock Data/DailyCovidStocks_DOWindustrial.json') as g:\n",
+    "    file_data = json.load(g)\n",
+    "\n",
+    "# if pymongo >= 3.0 use insert_one() for inserting one document\n",
+    "collection.insert_one(file_data)\n",
+    "\n",
+    "\n",
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from pymongo import MongoClient\n",
+    "\n",
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pro3news']\n",
+    "collection= db['weekly_stock_data']\n",
+    "\n",
+    "with open('../COVID-stocks/Stock Data/WeeklyCovidStocks_DOWindustrial.json') as g:\n",
+    "    file_data = json.load(g)\n",
+    "\n",
+    "# if pymongo >= 3.0 use insert_one() for inserting one document\n",
+    "collection.insert_one(file_data)\n",
+    "\n",
+    "\n",
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from pymongo import MongoClient\n",
+    "\n",
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pro3news']\n",
+    "collection= db['weekly_stock_data']\n",
+    "\n",
+    "with open('../COVID-stocks/Stock Data/WeeklyCovidStocks_SP500.json') as g:\n",
+    "    file_data = json.load(g)\n",
+    "\n",
+    "# if pymongo >= 3.0 use insert_one() for inserting one document\n",
+    "collection.insert_one(file_data)\n",
+    "\n",
+    "\n",
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from pymongo import MongoClient\n",
+    "\n",
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pro3news']\n",
+    "collection= db['monthly_stock_data']\n",
+    "\n",
+    "with open('../COVID-stocks/Stock Data/MonthlyCovidStocks_SP500.json') as g:\n",
+    "    file_data = json.load(g)\n",
+    "\n",
+    "# if pymongo >= 3.0 use insert_one() for inserting one document\n",
+    "collection.insert_one(file_data)\n",
+    "\n",
+    "\n",
+    "client.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "from pymongo import MongoClient\n",
+    "\n",
+    "client = MongoClient('localhost', 27017)\n",
+    "db = client['pro3news']\n",
+    "collection= db['monthly_stock_data']\n",
+    "\n",
+    "with open('../COVID-stocks/Stock Data/MonthlyCovidStocks_DOWindustrial.json') as g:\n",
     "    file_data = json.load(g)\n",
     "\n",
     "# if pymongo >= 3.0 use insert_one() for inserting one document\n",
@@ -178,7 +270,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.4-final"
   }
  },
  "nbformat": 4,
